<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MemberDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/member_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerInParent="true"
                    android:layout_margin="5dp"
                    app:civ_border_color="@color/colorPrimary"
                    app:civ_border_width="6dp" />

                <TextView
                    android:id="@+id/user_account_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="5dp"
                    android:hint="account_no"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorRed"
                    android:textStyle="bold" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/account_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/pay_bill"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/due_amount_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/empty_round_background"
                    android:paddingStart="10dp"
                    android:text="Due Balance"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/due_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/empty_round_background"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="due balance"
                    android:padding="5dp"
                    android:textColor="@color/colorGreen"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/pay_bill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:background="@drawable/background_fill_1"
                android:backgroundTint="@color/colorGreen"
                android:padding="5dp"
                android:text="Pay Bill"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/empty_round_background"
            android:text="@string/mobile_no"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/member_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/empty_round_background"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/mobile"
            android:padding="5dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/empty_round_background"
            android:text="@string/email"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/member_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/empty_round_background"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/email"
            android:maxLines="1"
            android:padding="5dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/empty_round_background"
            android:text="@string/address"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/member_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/empty_round_background"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/address"
            android:padding="5dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/show_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/background_fill_1"
                    android:backgroundTint="@color/colorGold"
                    android:padding="5dp"
                    android:text="Show all orders"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/show_dashboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/background_fill_1"
                    android:backgroundTint="@color/colorGold"
                    android:padding="5dp"
                    android:text="Show user Dashboard"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/show_referral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/background_fill_1"
                    android:backgroundTint="@color/colorGold"
                    android:padding="5dp"
                    android:text="Show user Referrals"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/btn_action"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/background_fill_1"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>